Bug fix when popover is forcibly closed, sometimes the text field is not clickable even though the popover is not visible

--- a/bootstrap-moment.css
+++ b/bootstrap-moment.css
@@ -99,3 +99,7 @@
 /* add padding  */
 .left-addon input  { padding-left:  30px; }
 .right-addon input { padding-right: 30px; }
+
+.popover:not(.in) {
+    display: none !important;
+}
